--- a/pybind/CMakeLists.txt
+++ b/pybind/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB_RECURSE _sources ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
 
 find_package(pybind11)
-pybind11_add_module(libmeos ${_sources})
-target_link_libraries(libmeos PRIVATE meos)
-set_target_properties(libmeos PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}"
+pybind11_add_module(pymeos ${_sources})
+target_link_libraries(pymeos PRIVATE meos)
+set_target_properties(pymeos PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}"
                                          SUFFIX "${PYTHON_MODULE_EXTENSION}")
