--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,9 @@ keywords = mobility, movement, geotemporal, trajectory, geos, meos
 setup_requires =
     pybind11~=2.5
 zip_safe = false
+
+[options.extras_require]
+docs =
+    sphinx
+    sphinx-rtd-theme
+    numpydoc
