Update logo and update repo URLs to point to Adonmo's GitHub

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pymeos
 version = file: VERSION
 author = Krishna Chaitanya Bommakanti
 author_email = bkchaitan94@gmail.com
-url = https://github.com/chaitan94/meos
+url = https://github.com/adonmo/meos
 license_file = LICENSE
 description = Python bindings to MEOS
 long_description = file: README.md
