--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -22,6 +22,17 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Setup GEOS for Mac OS
+      if: matrix.os == 'macos-latest'
+      run: brew install geos
+
+    - name: Setup GEOS for Windows
+      if: matrix.os == 'windows-latest'
+      shell: bash
+      run: |
+        bash scripts/prepare_for_build.sh
+        python -c "import os; os.add_dll_directory(r'C:\Program Files (x86)\GEOS\bin') if hasattr(os, 'add_dll_directory') else None"
+
     - name: Install cibuildwheel
       run: |
         python -m pip install cibuildwheel==1.4.2
@@ -35,9 +46,7 @@ jobs:
         #       Refer: https://cibuildwheel.readthedocs.io/en/stable/cpp_standards/#windows-and-python-27
         CIBW_SKIP: pp27* cp27* *win32 *i686
         CIBW_BEFORE_BUILD_LINUX: bash scripts/prepare_for_build.sh
-        CIBW_BEFORE_BUILD_MACOS: brew install geos
-        CIBW_ENVIRONMENT_WINDOWS: 'PATH="C:/Program Files (x86)/GEOS/bin;$PATH" GEOS_LIBRARY_PATH="C:/Program Files (x86)/GEOS/lib" GEOS_INCLUDE_PATH="C:/Program Files (x86)/GEOS/include"'
-        CIBW_BEFORE_BUILD_WINDOWS: bash scripts/prepare_for_build.sh
+        CIBW_ENVIRONMENT_WINDOWS: 'PATH="C:/Program Files (x86)/GEOS/bin;{project};$PATH" GEOS_LIBRARY_PATH="C:/Program Files (x86)/GEOS/lib" GEOS_INCLUDE_PATH="C:/Program Files (x86)/GEOS/include"'
         CIBW_BEFORE_TEST: pip install -r test/python/requirements.txt
         CIBW_TEST_COMMAND: pytest {project}/test/python
       run: |
