--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ keywords = mobility, movement, geotemporal, trajectory, geos, meos
 setup_requires =
     pybind11~=2.5
 zip_safe = false
+packages = find:
 
 [options.extras_require]
 docs =
