--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -29,9 +29,7 @@ jobs:
     - name: Setup GEOS for Windows
       if: matrix.os == 'windows-latest'
       shell: bash
-      run: |
-        bash scripts/prepare_for_build.sh
-        python -c "import os; os.add_dll_directory(r'C:\Program Files (x86)\GEOS\bin') if hasattr(os, 'add_dll_directory') else None"
+      run: bash scripts/prepare_for_build.sh
 
     - name: Install cibuildwheel
       run: |
