--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -16,9 +16,11 @@ CPMAddPackage(
 )
 
 CPMAddPackage(
-  NAME StableCoder-cmake-scripts
-  GITHUB_REPOSITORY StableCoder/cmake-scripts
-  GIT_TAG 3d2d5a9fb26f0ce24e3e4eaeeff686ec2ecfb3fb
+  NAME MCSS
+  GITHUB_REPOSITORY TheLartians/m.css
+  # using the patch until https://github.com/mosra/m.css/pull/171 is resolved
+  GIT_TAG 1bf162b96d5bfefc9967a80cef138f1270ffa415
+  DOWNLOAD_ONLY YES
 )
 
 # ---- Setup targets for python docs ----
@@ -37,18 +39,26 @@ add_custom_target(
 
 # ---- Doxygen ----
 
-set(BUILD_DOCUMENTATION ON CACHE INTERNAL "")
-include(${StableCoder-cmake-scripts_SOURCE_DIR}/doxygen.cmake)
-
 # set Doxyfile variables
 set(DOXYGEN_PROJECT_NAME meos)
 set(DOXYGEN_PROJECT_VERSION ${meos_VERSION})
 set(DOXYGEN_PROJECT_ROOT "${MEOS_ROOT}")
+set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/cppdocs")
 
-# see https://github.com/StableCoder/cmake-scripts#doxygen-doxygencmake for additional options
-build_docs(
-  TARGET_NAME cppdocs
-  DOXYFILE_PATH ${CMAKE_CURRENT_LIST_DIR}/cpp/Doxyfile
-  OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen
-  PROCESS_DOXYFILE ON
+configure_file(
+  ${CMAKE_CURRENT_LIST_DIR}/cpp/Doxyfile
+  ${CMAKE_CURRENT_BINARY_DIR}/cpp/Doxyfile
+)
+
+configure_file(
+  ${CMAKE_CURRENT_LIST_DIR}/cpp/conf.py
+  ${CMAKE_CURRENT_BINARY_DIR}/cpp/conf.py
+)
+
+add_custom_target(
+  cppdocs
+  ${CMAKE_COMMAND} -E make_directory "${DOXYGEN_OUTPUT_DIRECTORY}"
+  COMMAND "${MCSS_SOURCE_DIR}/documentation/doxygen.py" "${CMAKE_CURRENT_BINARY_DIR}/cpp/conf.py"
+  COMMAND echo "Docs written to: ${DOXYGEN_OUTPUT_DIRECTORY}"
+  WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
 )
