--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ keywords = mobility, movement, geotemporal, trajectory, geos, meos
 [options]
 setup_requires =
     pybind11~=2.5
+    Shapely~=1.7
 zip_safe = false
 packages = find:
 
