Build wheels for py3.9

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/setup-python@v2
       name: Install Python
       with:
-        python-version: 3.8
+        python-version: 3.9
 
     - name: Setup GEOS for Mac OS
       if: matrix.os == 'macos-latest'
@@ -33,16 +33,17 @@ jobs:
 
     - name: Install cibuildwheel
       run: |
-        python -m pip install cibuildwheel==1.4.2
+        python -m pip install cibuildwheel==1.7.1
 
     - name: Build wheels
       env:
         # Skipping:
+        #   - pypy - MEOS doesn't support it as of now
         #   - Python 2.7 - MEOS doesn't support it
         #   - Linux (32-bit)
         #   - Windows (32-bit)
         #       Refer: https://cibuildwheel.readthedocs.io/en/stable/cpp_standards/#windows-and-python-27
-        CIBW_SKIP: pp27* cp27* *win32 *i686
+        CIBW_SKIP: pp* cp27* *win32 *i686
         CIBW_BEFORE_BUILD_LINUX: bash scripts/prepare_for_build.sh
         CIBW_ENVIRONMENT_WINDOWS: 'PATH="C:/Program Files (x86)/GEOS/bin;{project};$PATH" GEOS_LIBRARY_PATH="C:/Program Files (x86)/GEOS/lib" GEOS_INCLUDE_PATH="C:/Program Files (x86)/GEOS/include"'
         CIBW_BEFORE_TEST: pip install -r test/python/requirements.txt
